--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
             <input type="radio" id="male" name="gender" value="MALE">
             <label for="male">MALE</label><br>
             <input type="radio" id="female" name="gender" value="female">
-            <label for="female">FEMALE</label>
+            <label for="female">FEMALE</label><br><br>
+            <input type="date" id="birthday" name="birthday">
+            <label for="birthday">Birthday</label>
+
+
+            
         </form>
     </body>
 </html>
