link css/styles.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <title>independent project week 2</title>
+    <link rel="stylesheets" href="css/styles.css"
     
 </head>
 
